--- a/css/_skills.scss
+++ b/css/_skills.scss
@@ -5,27 +5,33 @@
       font-family: 'semi';padding: 30px  0 0 0;
       }
       p{
-        font-size: 20px;font-family: 'light';padding-bottom: 20px;width: 60%;
+        font-size: 20px;font-family: 'light';;
       }
 
       .row{
         .col-md-4{
           .tab{
-            display: flex;flex-direction: column;background-color: aqua;font-size: 30px;padding-top: 50px;
+            display: flex;flex-wrap: wrap;justify-content: center;font-size: 30px;padding-top: 40px;
             button{
-              font-family: 'semi';text-transform: uppercase;
+              font-family: 'semi';text-transform: uppercase;border: 2px inset #2821a9;padding: 5px;margin: 5px;outline: none;
+            background-color: transparent;color: #fff;border-radius: 20px 0 20px 0;
+            }
+            button:hover{
+              color: #fff;background-color: #322ad1;
             }
           }
         }
 
         .col-md-8{
           .content{
-            border-left: 1px outset red;height: 400px;background-color: aquamarine;padding: 30px 40px 0 40px;
-            .city{
+  .city{
               .skill{
-                background-color: red;margin-bottom: 20px;
+                background-color:#ffffff;;margin-bottom: 20px;
                 .bar{
-                  background-color: green;display: flex;justify-content: end;padding-right: 30px;
+                  background-color: #322ad1;display: flex;justify-content: end;padding-right: 30px;font-family: 'semi';font-size: 20px;
+                  span{
+                    padding-right: 10px;text-transform: uppercase;font-family: 'light';
+                  }
                 }
               }
             }
@@ -37,7 +43,119 @@
 }
 
 
+@media (min-width: 768px) {
+ .skills{
+   p{
+     width: 60%;
+   }
+  .tab{
+    flex-direction: column;
+  }
+  .content{
+    padding-top: 40px;
+  }
+}
+#native{
+  width: 20% !important;
+}
+}
 
+
+
+
+
+
+@media (min-width: 1200px) {
+  .tab{
+    width: 80%;
+  }
+ #paris{
+   .bar{
+     width: 30% !important;
+   }
+ }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// @media (min-width: 992px) { 
+//   .skills{
+
+//     .container{
+//       h2{
+//         font-family: 'semi';padding: 30px  0 0 0;
+//         }
+//         p{
+//           font-size: 20px;font-family: 'light';padding-bottom: 20px;width: 60%;
+//         }
+  
+//         .row{
+//           .col-md-4{
+//             .tab{
+//               display: flex;flex-direction: column;background-color: aqua;font-size: 30px;padding-top: 50px;
+//               button{
+//                 font-family: 'semi';text-transform: uppercase;
+//               }
+//             }
+//           }
+  
+//           .col-md-8{
+//             .content{
+//               border-left: 1px outset red;height: 400px;background-color: aquamarine;padding: 30px 40px 0 40px;
+//               .city{
+//                 .skill{
+//                   background-color: red;margin-bottom: 20px;
+//                   .bar{
+//                     background-color: green;display: flex;justify-content: end;padding-right: 30px;;font-family: 'semi';font-size: 20px;
+//                     span{
+//                       padding-right: 20px;text-transform: uppercase;font-family: 'light';
+//                     }
+//                   }
+//                 }
+//               }
+//             }
+//           }
+//         }
+//     }
+  
+//   }
+  
+
+// }
 
 
 
