--- a/css/style.css
+++ b/css/style.css
@@ -677,33 +677,68 @@ header ul li a:hover {
 .skills .container p {
   font-size: 20px;
   font-family: "light";
-  padding-bottom: 20px;
-  width: 60%;
 }
 .skills .container .row .col-md-4 .tab {
   display: flex;
-  flex-direction: column;
-  background-color: aqua;
+  flex-wrap: wrap;
+  justify-content: center;
   font-size: 30px;
-  padding-top: 50px;
+  padding-top: 40px;
 }
 .skills .container .row .col-md-4 .tab button {
   font-family: "semi";
   text-transform: uppercase;
+  border: 2px inset #2821a9;
+  padding: 5px;
+  margin: 5px;
+  outline: none;
+  background-color: transparent;
+  color: #fff;
+  border-radius: 20px 0 20px 0;
 }
-.skills .container .row .col-md-8 .content {
-  border-left: 1px outset red;
-  height: 400px;
-  background-color: aquamarine;
-  padding: 30px 40px 0 40px;
+.skills .container .row .col-md-4 .tab button:hover {
+  color: #fff;
+  background-color: #322ad1;
 }
 .skills .container .row .col-md-8 .content .city .skill {
-  background-color: red;
+  background-color: #ffffff;
   margin-bottom: 20px;
 }
 .skills .container .row .col-md-8 .content .city .skill .bar {
-  background-color: green;
+  background-color: #322ad1;
   display: flex;
   justify-content: end;
   padding-right: 30px;
+  font-family: "semi";
+  font-size: 20px;
+}
+.skills .container .row .col-md-8 .content .city .skill .bar span {
+  padding-right: 10px;
+  text-transform: uppercase;
+  font-family: "light";
+}
+
+@media (min-width: 768px) {
+  .skills p {
+    width: 60%;
+  }
+  .skills .tab {
+    flex-direction: column;
+  }
+  .skills .content {
+    padding-top: 40px;
+  }
+
+  #native {
+    width: 20% !important;
+  }
+}
+@media (min-width: 1200px) {
+  .tab {
+    width: 80%;
+  }
+
+  #paris .bar {
+    width: 30% !important;
+  }
 }/*# sourceMappingURL=style.css.map */
