--- a/css/style.css
+++ b/css/style.css
@@ -673,6 +673,9 @@ header ul li a:hover {
   }
 }
 /* Set width to make card deck cards 100% width */
+.skills {
+  padding: 20px 0 50px 0;
+}
 .skills .container h2 {
   font-family: "semi";
   padding: 30px 0 0 0;
