--- a/css/style.css
+++ b/css/style.css
@@ -821,4 +821,108 @@ footer p {
   .contact {
     padding-left: 120px;
   }
+}
+.projects .container {
+  padding-top: 20px;
+}
+.projects .container h2 {
+  font-family: "semi";
+  font-size: 50px;
+  margin-bottom: 30px;
+  height: 70px;
+  text-transform: capitalize;
+  width: 100%;
+}
+.projects .container h2::first-letter {
+  color: #322ad1;
+  font-size: 90px;
+}
+.projects .container .project {
+  font-family: "light";
+  margin: 20px 0 30px 0;
+  padding: 10px;
+  background-color: #040221;
+  border: 2px inset #fff;
+  border-radius: 30px 0 30px 0;
+}
+.projects .container .project .image {
+  height: 30%;
+}
+.projects .container .project .image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.projects .container .project .overlay {
+  height: 30%;
+  padding-left: 15px;
+  background-color: #040221;
+}
+.projects .container .project .overlay h3 {
+  font-family: "semi";
+  color: #fff;
+  font-size: 30px;
+  text-transform: capitalize;
+}
+.projects .container .project .overlay h3 span {
+  font-family: 20px;
+  color: wheat;
+  font-size: 20px;
+}
+.projects .container .project .overlay a {
+  font-family: "semi";
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+  border: 1px inset #322ad1;
+  border-radius: 20px 0 20px 0;
+  margin-bottom: 20px;
+}
+.projects .container .project .overlay ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
+}
+.projects .container .project .overlay ul li {
+  display: flex;
+  color: #322ad1;
+  width: 50%;
+  font-size: 20px;
+  font-family: "bold";
+}
+.projects .container .project .overlay ul li span {
+  color: #fff;
+  width: 100px;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+  .projects .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .projects .container .project {
+    width: 45%;
+  }
+  .projects .container .project .image {
+    height: 600px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .projects .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .projects .container .project {
+    width: 30%;
+  }
+  .projects .container .project .image {
+    height: 300px;
+  }
 }/*# sourceMappingURL=style.css.map */
